--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Jeff
 description: dead meme
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://kicksdeals.com/wp-content/uploads/2012/12/timb-6-inch-prm-waterproof-wheat-1.jpg
 
 #
 # Flags below are optional
